fix(did.controller): no plans to use DID labeling
Best to remove DID labels for now to avoid confusion
